# cryptography-archive

00ORIGIN/: 00ORIGIN
PGPlib/PGPlib-1.1/: README  acconfig.h  configure  configure.in
PGPlib/PGPlib-1.1/SSLeay/: Makefile.in
PGPlib/PGPlib-1.1/SSLeay/crypto/: Makefile.in
PGPlib/PGPlib-1.1/SSLeay/crypto/err/: Makefile.in
PGPlib/PGPlib-1.1/SSLeay/crypto/rand/: Makefile.in
PGPlib/PGPlib-1.1/SSLeay/crypto/rsa/: Makefile.in
PGPlib/PGPlib-1.1/SSLeay/crypto/stack/: Makefile.in
PGPlib/PGPlib-1.1/applications/: README  add.c  c_encrypt.c  dbase.c  p_encrypt.c  parser.c  pubring.tage  randseed.tage  scan.c  secring.tage
PGPlib/PGPlib-1.1/doc/: ChangeLog  Makefile.in  ToDo  pgplib.info  pgplib.texi  rfc1521.ps
PGPlib/PGPlib-1.1/man/: Makefile.in  decrypt_seckey.3  find_shortid.3  flio.3  free_keyrecord.3  get_keycontents.3  get_only_pubkey.3  get_pubkey_rec.3  is_compromised.3  keydb_end.3  keydb_init.3  keys_from_string.3  literal.3  make_ctb.3  packet.3  pub_encrypt_buffer.3  pubkey.3  tmac.doc-syms  trust.3  uids_from_keyid.3
PGPlib/PGPlib-1.1/src/: Makefile.in  armor.c  armor.inc  compress.c  conf.c  conf.h  conventional.c  keybase.c  keyring.c  literal_data.c  packet.c  pemcode.c  pgplib.h  pke.c  pubencrypt.c  version.h
PGPlib/PGPlib-1.1/zlib-1.0.4/: Makefile.in  compress.c  crc32.c  gzio.c  inflate.c  minigzip.c  uncompr.c  zutil.c
Q-misc/Qroot/gc/: Makefile.in  README  config.h  configure.in  dynamic_load.c  gc_private.h  mach_dep.c  malloc.c  mark.c  misc.c  os_dep.c
Q-misc/Qroot/gmp/: ChangeLog  INSTALL  Makefile.in  NEWS  TODO  TODO-before-release  VERSION  bar  config.sub  configure  configure.in  cre-conv-tab.c  cre-mparam.c  cre-stddefh.c  foo  gmp-impl.h  gmp.fn  gmp.h  gmp.texi  gmp.toc  longlong.h  memory.c  mp.h  mp_clz_tab.c  mp_set_fns.c
Q-misc/Qroot/gmp/contrib/bennet_yee/: Makefile  gmp-ext.h  gmp_errstr.c  gmp_fatal.c  gmp_fatal.h  mpz_2factor.c  mpz_get_raw.c  mpz_invert.c  mpz_jacobi.c  mpz_legendre.c  mpz_set_raw.c  mpz_size_raw.c  mpz_sqrtm_amm.c  mpz_sqrtm_berlekamp.c
Q-misc/Qroot/gmp/contrib/kweber/: Makefile  README  TO.DO  gmp+.h  gmp-impl+.h  gmp.h.patch  longlong+.h  mpn_accelgcd.c  mpn_bmod.c  mpn_bmodgcd.c  mpn_euclgcd.c  mpz_divides.c  mpz_gcd.c  rshift.c  sparc.times  sub_n_rsh.c
Q-misc/Qroot/gmp/mpbsd/: itom.c  min.c  mout.c  move.c  mtox.c  sdiv.c  xtom.c
Q-misc/Qroot/gmp/mpf/: Makefile.in  STUFF  abs.c  add.c  add_ui.c  clear.c  cmp.c  cmp_si.c  cmp_ui.c  div.c  div_2exp.c  div_ui.c  dump.c  get_str.c  init.c  init2.c  inp_str.c  iset.c  iset_d.c  iset_si.c  iset_str.c  iset_ui.c  mul.c  mul_2exp.c  mul_ui.c  neg.c  out_str.c  realloc.c  set.c  set_d.c  set_dfl_prec.c  set_si.c  set_str.c  set_ui.c  size.c  sqrt.c  sqrt_ui.c  sub.c  sub_ui.c  ui_div.c
Q-misc/Qroot/gmp/mpf/misc/: e.c  pi-richard.c  pi.c
Q-misc/Qroot/gmp/mpf/t/: a.out  add.c  add_ui.c  cmp.c  dbl.c  e.c  e2.c  pi-iterate.c  pi-machin.c
Q-misc/Qroot/gmp/mpn/: Makefile.in  TODO  configure.in  configure.in.orig
Q-misc/Qroot/gmp/mpn/alpha/: addmul_1.s  gmp-mparam.h  invert-limb.s  mul_1.s  submul_1.s  xadd_n.s
Q-misc/Qroot/gmp/mpn/am29000/: add_n.s  addmul_1.s  lshift.s  mul_1.s  rshift.s  sub_n.s  submul_1.s
Q-misc/Qroot/gmp/mpn/generic/: add_1.c  add_n.c  addmul_1.c  cmp.c  div_q1.c  divmod.c  divmod_1.c  divq1.c  dump.c  get_str.c  gmp-mparam.h  lshift.c  mod_1.c  mul.c  mul_1.c  mul_2.c  mul_n.c  random2.c  rshift.c  rshiftci.c  set_str.c  sqrt.c  sub_1.c  sub_n.c  submul_1.c  udiv_w_sdiv.c
Q-misc/Qroot/gmp/mpn/hppa1_0/: add_n.s  lshift.s  rshift.s  sub_n.s  udiv_qrnnd.s
Q-misc/Qroot/gmp/mpn/hppa1_1/: addmul_1.s  mul_1.s  submul_1.s  udiv_qrnnd.s  udiv_qrnndx.s
Q-misc/Qroot/gmp/mpn/i386/: add_n.s  addmul_1.S  asm.h  asm.h.orig  lshift.s  mul_1.S  rshift.s  sub_n.s  submul_1.S
Q-misc/Qroot/gmp/mpn/i960/: addmul_1.s  mul_1.s
Q-misc/Qroot/gmp/mpn/keep/: Makefile  mad  mad.c  mc88100-mul.s
Q-misc/Qroot/gmp/mpn/mc68020/: add_n.S  addmul_1.S  asm.h  mul_1.S  sub_n.S  submul_1.S  xaddmul_1.S
Q-misc/Qroot/gmp/mpn/mc88100/: add_n.s  mul_1.s  sub_n.s
Q-misc/Qroot/gmp/mpn/mc88110/: mul_1.s
Q-misc/Qroot/gmp/mpn/ns32000/: add_n.s  addmul_1.s  mul_1.s  sub_n.s  submul_1.s
Q-misc/Qroot/gmp/mpn/power/: add_n.s  addmul_1.s  lshift.s  mul_1.s  rshift.s  sub_n.s  submul_1.s
Q-misc/Qroot/gmp/mpn/powerpc32/: mul_1.s
Q-misc/Qroot/gmp/mpn/r3000/: addmul_1.s  mul_1.s  submul_1.s
Q-misc/Qroot/gmp/mpn/r4000/: gmp-mparam.h  mul_1.s
Q-misc/Qroot/gmp/mpn/sparc/: add_n.s  addmul_1.s  mul_1.s  sub_n.s  submul_1.s  udiv_qrnnd.s  udiv_qrnnd_bf.s  xmul_1.s
Q-misc/Qroot/gmp/mpn/sparc8/: addmul_1.s  mul_1.s  submul_1.s  udiv_qrnnd_fp.s  xmul_1.s
Q-misc/Qroot/gmp/mpn/tests/: Makefile  cputime.c  test-cvt  test-cvt.c  x.c
Q-misc/Qroot/gmp/mpn/vax/: add_n.s  addmul_1.s  mul_1.s  sub_n.s  submul_1.s
Q-misc/Qroot/gmp/mpq/: add.c  clear.c  cmp.c  cmp_ui.c  get_den.c  get_num.c  init.c  inv.c  set.c  set_den.c  set_num.c  set_si.c  set_ui.c  sub.c
Q-misc/Qroot/gmp/mpz/: Makefile.in  abs.c  add.c  add_ui.c  and.c  clear.c  clrbit.c  cmp.c  cmp_si.c  cmp_ui.c  com.c  configure.in  div.c  div_2exp.c  div_ui.c  dm.c  dm_floor.c  dm_floor_ui.c  dm_trunc.c  dm_ui.c  dmincl.c  fac_ui.c  gcd.c  gcdext.c  get_si.c  get_str.c  get_ui.c  init.c  inp_raw.c  inp_str.c  ior.c  iset.c  iset_si.c  iset_str.c  iset_ui.c  lcm.c  mdiv.c  mdiv_ui.c  mdm.c  mdm_ui.c  (+30 more)
Q-misc/Qroot/gmp/tests/: Makefile.in  configure.in  tst-convert.c  tst-dm.c  tst-dm_ui.c  tst-gcd.c  tst-mdm.c  tst-mdm_ui.c  tst-mul.c  tst-sqrtrem.c
pgp50i-win95nt-src/pgp50i-src/src/: Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  language50.txt  make-mkhdrs.pl  mkhdrs.bat  pgpinst  release.bat
pgp50i-win95nt-src/pgp50i-src/src/apps/: makefile.msc
pgp50i-win95nt-src/pgp50i-src/src/config/: config.sub  install-sh  post.in  pre.in
pgp50i-win95nt-src/pgp50i-src/src/lib/: makefile.msc
pgp50i-win95nt-src/pgp50i-src/src/man/: Makefile.in  pgp-integration.7  pgp.1  pgp.cfg.5  pgpe.1  pgpk.1  pgps.1  pgpv.1
pgp55pi-src/pgp55/libs/pgpcdk/: SDKChangeHistory  configure.in
(+46314 files in other folders)
