# This file is a shell script that supplies the information necessary
# to tailor a template configure script into the configure script
# appropriate for this directory.  For more information, check any
# existing configure script.

srctrigger=gc_private.h
srcname="grabage collection library"
configdirs=""

# per-host:

# per-target:
