# This file is a shell script fragment that supplies the information
# necessary for a configure script to process the program in
# this directory.  For more information, look at ../configure.

configdirs="mpn mpz mpf"
srctrigger=gmp-impl.h
srcname="GNU Multi-Precision library"

# per-host:

# per-target:

case "${target}" in
  sparc9*-*-*) mparam=mpn/sparc9/gmp-mparam.h ;;
  alpha*-*-*) mparam=mpn/alpha/gmp-mparam.h ;;
  r4000*-*-*) mparam=mpn/r4000/gmp-mparam.h ;;
  *-*-*) mparam=mpn/generic/gmp-mparam.h ;;
esac


files=${mparam}
links=gmp-mparam.h


