
AC_INIT(main.c)

AC_CONFIG_AUX_DIR(unix/config)

AC_CANONICAL_HOST

SHELL=/bin/sh

case "$host" in                                     
*-*-solaris*)                                                 
    RSA_OS=/lib/solaris
    ;;                                              
*-*-linux*)                                          
    RSA_OS=/lib/linux
    ;;                                              
*-*-aix*)                                           
    RSA_OS=/lib/aix
    ;;                                              
*-*-hpux*)
    RSA_OS=/lib/hpux
    ;;
*)                                                  
    RSA_OS=""
    ;;                                              
esac                                                

AC_SUBST(RSA_OS)                                   


AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(socket, socket,,,"-lnsl")
AC_CHECK_LIB(nsl, gethostbyname)
AC_CHECK_LIB(m, exp)

dnl Checks for libraries.
AC_CHECK_LIB(thread, main, THREADLIB="-lthread",
 AC_CHECK_LIB(pthreads, main, THREADLIB="-lpthreads",
  AC_CHECK_LIB(pthread, main, THREADLIB="-lpthread",
	AC_CHECK_LIB(dce, main, THREADLIB="-ldce"))))

AC_SUBST(THREADLIB)

AC_OUTPUT(Makefile)
